# sequence_move_dynamixel

./: README.md
motores/: CMakeLists.txt  package.xml
motores/src/: motionSeq.cpp
motores/src/sequences/: parBocAbajo.txt  parBocArri.txt  patDer.txt  patIzq.txt
